[package]
name = "tunl-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc.3"
anyhow = "1.0"
pretty_env_logger = "0.5"
log = "0.4"
cidr = { version = "0.2", features = ["serde"] }
toml = "0.8"
